Create model father for statistic issues and pulls.
