# swagger_server/models/__init__.py
@@ -10,6 +10,7 @@ from swagger_server.models.issue_labels import IssueLabels
 from swagger_server.models.map_string_number import MapStringNumber
 from swagger_server.models.repository import Repository
 from swagger_server.models.statistics import Statistics
+from swagger_server.models.statistics_base import StatisticsBase
 from swagger_server.models.statistics_issues import StatisticsIssues
 from swagger_server.models.statistics_pulls import StatisticsPulls
 from swagger_server.models.statistics_repositories import StatisticsRepositories
