# swagger_server/models/statistics_base.py
@@ -7,88 +7,61 @@ from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
 from swagger_server.models.map_string_number import MapStringNumber  # noqa: F401,E501
-from swagger_server.models.statistics_base import StatisticsBase  # noqa: F401,E501
 from swagger_server import util
 
 
-class StatisticsPulls(Model):
+class StatisticsBase(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
-    def __init__(self, merged: int=None, daily_closed_progress: MapStringNumber=None, daily_opened_progress: MapStringNumber=None):  # noqa: E501
-        """StatisticsPulls - a model defined in Swagger
+    def __init__(self, daily_closed_progress: MapStringNumber=None, daily_opened_progress: MapStringNumber=None):  # noqa: E501
+        """StatisticsBase - a model defined in Swagger
 
-        :param merged: The merged of this StatisticsPulls.  # noqa: E501
-        :type merged: int
-        :param daily_closed_progress: The daily_closed_progress of this StatisticsPulls.  # noqa: E501
+        :param daily_closed_progress: The daily_closed_progress of this StatisticsBase.  # noqa: E501
         :type daily_closed_progress: MapStringNumber
-        :param daily_opened_progress: The daily_opened_progress of this StatisticsPulls.  # noqa: E501
+        :param daily_opened_progress: The daily_opened_progress of this StatisticsBase.  # noqa: E501
         :type daily_opened_progress: MapStringNumber
         """
         self.swagger_types = {
-            'merged': int,
             'daily_closed_progress': MapStringNumber,
             'daily_opened_progress': MapStringNumber
         }
 
         self.attribute_map = {
-            'merged': 'merged',
             'daily_closed_progress': 'dailyClosedProgress',
             'daily_opened_progress': 'dailyOpenedProgress'
         }
-        self._merged = merged
         self._daily_closed_progress = daily_closed_progress
         self._daily_opened_progress = daily_opened_progress
 
     @classmethod
-    def from_dict(cls, dikt) -> 'StatisticsPulls':
+    def from_dict(cls, dikt) -> 'StatisticsBase':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The Statistics_pulls of this StatisticsPulls.  # noqa: E501
-        :rtype: StatisticsPulls
+        :return: The Statistics_base of this StatisticsBase.  # noqa: E501
+        :rtype: StatisticsBase
         """
         return util.deserialize_model(dikt, cls)
 
     @property
-    def merged(self) -> int:
-        """Gets the merged of this StatisticsPulls.
-
-
-        :return: The merged of this StatisticsPulls.
-        :rtype: int
-        """
-        return self._merged
-
-    @merged.setter
-    def merged(self, merged: int):
-        """Sets the merged of this StatisticsPulls.
-
-
-        :param merged: The merged of this StatisticsPulls.
-        :type merged: int
-        """
-
-        self._merged = merged
-
-    @property
     def daily_closed_progress(self) -> MapStringNumber:
-        """Gets the daily_closed_progress of this StatisticsPulls.
+        """Gets the daily_closed_progress of this StatisticsBase.
 
 
-        :return: The daily_closed_progress of this StatisticsPulls.
+        :return: The daily_closed_progress of this StatisticsBase.
         :rtype: MapStringNumber
         """
         return self._daily_closed_progress
 
     @daily_closed_progress.setter
     def daily_closed_progress(self, daily_closed_progress: MapStringNumber):
-        """Sets the daily_closed_progress of this StatisticsPulls.
+        """Sets the daily_closed_progress of this StatisticsBase.
 
 
-        :param daily_closed_progress: The daily_closed_progress of this StatisticsPulls.
+        :param daily_closed_progress: The daily_closed_progress of this StatisticsBase.
         :type daily_closed_progress: MapStringNumber
         """
 
@@ -96,20 +69,20 @@ class StatisticsPulls(Model):
 
     @property
     def daily_opened_progress(self) -> MapStringNumber:
-        """Gets the daily_opened_progress of this StatisticsPulls.
+        """Gets the daily_opened_progress of this StatisticsBase.
 
 
-        :return: The daily_opened_progress of this StatisticsPulls.
+        :return: The daily_opened_progress of this StatisticsBase.
         :rtype: MapStringNumber
         """
         return self._daily_opened_progress
 
     @daily_opened_progress.setter
     def daily_opened_progress(self, daily_opened_progress: MapStringNumber):
-        """Sets the daily_opened_progress of this StatisticsPulls.
+        """Sets the daily_opened_progress of this StatisticsBase.
 
 
-        :param daily_opened_progress: The daily_opened_progress of this StatisticsPulls.
+        :param daily_opened_progress: The daily_opened_progress of this StatisticsBase.
         :type daily_opened_progress: MapStringNumber
         """
 
