# swagger_server/models/statistics_issues.py
@@ -7,6 +7,7 @@ from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
 from swagger_server.models.map_string_number import MapStringNumber  # noqa: F401,E501
+from swagger_server.models.statistics_base import StatisticsBase  # noqa: F401,E501
 from swagger_server import util
 
 
